--- a/src/components/pages/list-page/list-page.component.css
+++ b/src/components/pages/list-page/list-page.component.css
@@ -1,4 +1,32 @@
 #listPage {
   width: 100%;
   height: 100%;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.2px;
+  color: #000000;
+  margin-top: 120px;
+  margin-left: 100px;
+}
+.list-wrapper{
+  padding: 100px;
+}
+.map-view-card > .el-card__body {
+  padding: 0;
+}
+.list-header{
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.list-title{
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: bold;
 }
